changed style, trying to fix text in dark mode under enoji field

--- a/Emoji Mood Tracker/styles.css
+++ b/Emoji Mood Tracker/styles.css
@@ -65,9 +65,9 @@ textarea {
 }
 
 .dark-mode textarea {
-    background: #555; 
-    color: white; 
-    border: 1px solid #888;
+    background: #777;
+    color: #fff;       
+    border: 1px solid #bbb; 
 }
 
 ul {
